@@ -14,13 +14,19 @@ namespace sahnee_bot.Embeds
         {
             EmbedGenerator embedGenerator = new EmbedGenerator();
 
-            string content = "`/help` → shows this dialog.\n"+
+            string content = "`/help` → shows this dialog.\n" +
                              "`/warn @UserName \"Your reason here\" <optional: http/s link>`" +
                              " → Issues a warning to the given user. If a link is provided, the destination will be shown.\n" +
+                             "`/warn @Role \"Your reason here\" <optional: http/s link>`" +
+                             " → Issues a warning to all users in the given role. If a link is provided, the destination will be shown.\n" +
                              "`/unwarn @UserName \"Your reason here\" <optional: http/s link>`" +
                              " → Revokes a warning from the given user. If a link is provided, the destination will be shown.\n" +
                              "`/unwarn @UserName`" +
                              " → Revokes a warning from the given user. No reason will be given.\n" +
+                             "`/unwarn @Role \"Your reason here\" <optional: http/s link>`" +
+                             " → Revokes a warning from all users within that role.\n" +
+                             "`/unwarn @Role`" +
+                             " → Revokes a warning from all users withing that role. No reason will be given.\n" +
                              "`/warnall \"Your reason here\" <optional: http/s link>`" +
                              " → Issues a warning to all users and bots on your server.\n" +
                              "`/warnhistory @UserName`" +
@@ -39,14 +45,14 @@ namespace sahnee_bot.Embeds
                              " → Shows you all warnings the specified user got today.\n" +
                              "`/cleanuproles`" +
                              " → Will manually run the cleanup-job for unused warning roles on your server.\n" +
-                             "`/changelog <Amount>`" + 
-                             " → Will show the latest or the last <Amount> changelogs.\n" + 
+                             "`/changelog <Amount>`" +
+                             " → Will show the latest or the last <Amount> changelogs.\n" +
                              "`/changeprefix <NewPrefix>`" +
-                             " → Will change your current prefix to a custom one.\n" + 
-                             "`/add<mod/admin>role` @RoleName" + 
-                             " → Will enable all users in the given role(s) to execute the commands based on the given privileges\n" + 
-                             "`/list<mod/admin>roles`" + 
-                             " → Will list you all available roles";
+                             " → Will change your current prefix to a custom one.\n" +
+                             "`/add<mod/admin>role` @RoleName" +
+                             " → Will enable all users in the given role(s) to execute the commands based on the given privileges\n" +
+                             "`/list<mod/admin>roles`" +
+                             " → Will list you all available roles\n";
             
             List<EmbedBuilder> embeds = embedGenerator.GenerateSahneeBotEmbed("sahnee-bot help",
                 "Here we have a list of all available commands and their features.\n" +
