@@ -1,5 +1,7 @@
 ﻿Version 0.9.94:
 + Custom prefixes now can be any amount of characters long thus are not limited to one character anymore.
++ Added a feature to the `/warn` command - `/warn @Role <reason>`. You are now able to warn all users within a role.
++ Added a feature to the `/unwarn` command - `/unwarn @Role <optional: reason>`. You are now able to unwarn all users within a role.
 #%&
 Version 0.9.93:
 + Added a new command system for the server. That means for you: quicker command execution that's more stable and reliable
